tunnel/pgrok-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgrok-http
  namespace: tunnel
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: pgrok
---
apiVersion: v1
kind: Service
metadata:
  name: pgrok
  namespace: tunnel
spec:
  type: NodePort
  ports:
    - name: tunnel
      port: 4443
      nodePort: 32443
  selector:
    app: pgrok
